--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
     "phpunit/phpunit": "~3.7"
   },
   "autoload": {
-    "psr-0": { "Multisort": "src/" },
+    "psr-0": { "Multisort": "src/" }
   }
 }
