--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 language: php
 
 php:
-    - 5.2
     - 5.3
     - 5.4
     - 5.5
     - 5.6
+    - hhvm
+
+matrix:
+    allow_failures:
+        - php: hhvm
 
 before_script:
-    # php deps
-    - composer self-update
-    - composer install --dev
+  - composer dumpautoload -o
 
-script: ./bin/phpunit -v
+script: phpunit --verbose --colors --coverage-text
