--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
     }
   ],
   "require": {
-    "php": ">=5.2.0"
+    "php": ">=5.3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~3.7"
+    "phpunit/phpunit": "~3.7",
+    "squizlabs/php_codesniffer": "1.4.8"
   },
   "autoload": {
     "psr-0": { "Multisort": "src/" }
