--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~3.7",
-    "squizlabs/php_codesniffer": "1.4.8"
+    "squizlabs/php_codesniffer": "dev-master"
   },
   "autoload": {
     "psr-0": { "Multisort": "src/" }
